# lbl-snipplets

./: Master_search_UV_vis_PL_Optimization.ipynb  README_h5_analysis.md  cbox_plot.example.yaml  cd-plot.ipynb  cd_plot_config.example.yaml  cd_plot_from_config.py  gamma_analysis_from_config.py  h5-plot-copilot.ipynb  h5-plot-test.ipynb  h5-plot.ipynb  h5_analysis.py  h5_analysis_example_usage.py  h5_plot_from_config.py  heterogeneity.py  lps-preprocessing.py  main.py  metrics.py  plot_helper.py  pyproject.toml  test_plot_helper.py  xrd-plot.ipynb  xrd_plot.example.yaml  xrd_plot_config.yaml  xrd_plot_from_config.py  xyconv.py
