[project]
name = "lbl-snipplets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
xrd = [
    "xylib-py>=1.6.1",
]

